--- a/.gitignore
+++ b/.gitignore
@@ -3,21 +3,21 @@ node_modules
 .pnp
 .pnp.js
 
-# Testing
-coverage
-
-# Production
-dist
-build
-
-# Environment files
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Debug logs
+# Build output
+dist
+build
+out
+
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -33,11 +33,13 @@ yarn-error.log*
 *.sln
 *.sw?
 
-# Uploaded media files
-uploads/
+# Testing
+coverage
 
-# TypeScript
-*.tsbuildinfo
+# Temporary files
+*.tmp
+*.temp
 
-# Vite
-.vite/
+# Uploads
+backend/uploads/*
+!backend/uploads/.gitkeep
